# robolina

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-package.yml  ci.yml
cli/: CMakeLists.txt  main.cpp
doc/: CMakeLists.txt  doxygen_config.in.txt
include/cpptokenfinder/: cpptokenfinder.hpp
include/robolina/: robolina.hpp
sample/: CMakeLists.txt  main.cpp
test/cli/: replacements.txt  replacements_bad1.txt  replacements_bad2.txt  replacements_bad3.txt  replacements_bad4.txt  replacements_bad5.txt  replacements_short_syntax.txt  run_robolina_tests.cmd  run_robolina_tests.sh
test/cli/test_results/: bad_missing_args4.txt  bad_missing_value1.txt  bad_missing_value2.txt  bad_missing_value3.txt  bad_too_many_args1.txt  bad_unknown_args1.txt  bad_unknown_args2.txt  bad_value1.txt  bad_value10.txt  bad_value2.txt  bad_value3.txt  bad_value4.txt  bad_value5.txt  bad_value6.txt  bad_value7.txt  bad_value8.txt  bad_value9.txt  test_dry_run.txt  test_verbose.txt
test/cli/test_results/test_case_ignore/: testfile1_OneTwoThree.txt
test/cli/test_results/test_cstring/: testfile1_OneTwoThree.txt  testfile2.txt
test/cli/test_results/test_dry_run/: testfile1_OneTwoThree.txt
test/cli/test_results/test_extensions/: testfile4_four_five_six.notouch
test/cli/test_results/test_help1/: help1.txt  help2.txt
test/cli/test_results/test_no_rename/: testfile3_one_two_three_text.txt
test/cli/test_results/test_one_file/: testfile3_one_two_three_text.txt
test/cli/test_results/test_one_file/nestedtestdirectory/: testfile4_one_two_three.txt
test/cli/test_results/test_replacements_file/: testfile1_HelloWorld.txt
test/cli/test_results/test_replacements_file_short_syntax/: testfile3_hello_world_texxt.txt  testfile4_one_two_three.notouch
test/cli/test_results/test_replacements_file_with_args/: testfile1_HelloWorld.txt
test/cli/test_results/test_verbose/: testfile1_FourFiveSix.txt
test/cli/test_results/test_verbose/nestedtestdirectory/: testfile4_four_five_six.txt
test/cli/test_results/test_whole_word/: testfile1_OneTwoThree.txt  testfile3_ENO_two_three_text.txt
test/robolina/: CMakeLists.txt  test_robolina.cpp
